--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ click==6.7
 Flask==1.0.2
 httplib2==0.11.3
 itsdangerous==0.24
-Jinja2==2.10
+Jinja2 >= 2.10
 MarkupSafe==1.0
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
